[package]
name = "tdb"
version = "1.0.0"
edition = "2021"
publish = false
description = "Simple Talis database commands."
authors = ["Teddy Byron <ted@talisclinical.com>"]
readme = "README.md"

[dependencies]
# indicatif = "0.17.0-beta.1"
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "mssql"] }
tokio = { version = "1.14.0", features = ["full", "parking_lot"] }
toml = "0.5.8"
tracing = "0.1.29"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "cargo", "env", "suggestions", "color", "wrap_help", "unicode"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.2"
default-features = false
features = ["std", "env-filter", "fmt", "ansi", "parking_lot"]

[features]
