[package]
name = "tdb"
version = "1.0.0"
edition = "2021"
publish = false
description = "Simple Talis MSSQL CLI."
authors = ["Teddy Byron <tbyron@talisclinical.com>"]
readme = "README.md"

[dependencies]
toml = "0.5.8"
tracing = "0.1.29"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "cargo", "color", "env", "suggestions", "unicode", "wrap_help"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tiberius]
version = "0.6.5"
features = ["sql-browser-tokio"]

[dependencies.tokio]
version = "1.14.0"
features = ["rt", "macros", "net", "parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.2"
default-features = false
features = ["std", "env-filter", "fmt", "ansi", "parking_lot"]

[features]
